added support for uport user creation
