# ofchat/swagger/ofchat.json
@@ -107,6 +107,34 @@
                 }
             }
         },
+        "/restapi/v1/ask/uport/register":{
+            "post":{
+                "consumes":[
+                ],
+                "produces":[
+                ],
+                "parameters":[
+                    {
+                        "name":"body",
+                        "in":"body",
+                        "required":true,
+                        "schema":{
+                            "type":"string"
+                        }
+                    }
+                ],
+                "responses":{
+                    "200":{
+                        "description":"OK",
+                        "headers":{
+                        },
+                        "schema":{
+                            "type":"string"
+                        }
+                    }
+                }
+            }
+        },
         "/restapi/v1/ask/{userId}":{
             "get":{
                 "consumes":[
@@ -404,7 +432,7 @@
             }
         },
         "/restapi/v1/chat/certificate":{
-            "post":{
+            "get":{
                 "consumes":[
                 ],
                 "produces":[
@@ -419,6 +447,42 @@
                         },
                         "schema":{
                             "type":"object"
+                        }
+                    }
+                }
+            }
+        },
+        "/restapi/v1/chat/enroll":{
+            "get":{
+                "consumes":[
+                ],
+                "produces":[
+                ],
+                "parameters":[
+                ],
+                "responses":{
+                    "200":{
+                        "description":"OK",
+                        "headers":{
+                        },
+                        "schema":{
+                            "type":"string"
+                        }
+                    }
+                }
+            },
+            "delete":{
+                "consumes":[
+                ],
+                "produces":[
+                    "text/plain"
+                ],
+                "parameters":[
+                ],
+                "responses":{
+                    "200":{
+                        "description":"OK",
+                        "headers":{
                         }
                     }
                 }
@@ -1335,63 +1399,6 @@
                         "schema":{
                             "type":"string"
                         }
-                    }
-                ],
-                "responses":{
-                    "200":{
-                        "description":"OK",
-                        "headers":{
-                        }
-                    }
-                }
-            }
-        },
-        "/restapi/v1/chat/{username}/enroll":{
-            "post":{
-                "consumes":[
-                ],
-                "produces":[
-                    "text/plain"
-                ],
-                "parameters":[
-                    {
-                        "type":"string",
-                        "name":"username",
-                        "in":"path",
-                        "required":true
-                    },
-                    {
-                        "name":"body",
-                        "in":"body",
-                        "required":true,
-                        "schema":{
-                            "type":"string"
-                        }
-                    }
-                ],
-                "responses":{
-                    "200":{
-                        "description":"OK",
-                        "headers":{
-                        },
-                        "schema":{
-                            "type":"string"
-                        }
-                    }
-                }
-            },
-            "delete":{
-                "consumes":[
-                ],
-                "produces":[
-                    "text/plain"
-                ],
-                "parameters":[
-                    {
-                        "type":"string",
-                        "name":"username",
-                        "in":"path",
-                        "required":true
                     }
                 ],
                 "responses":{
@@ -2728,6 +2735,261 @@
                 }
             }
         },
+        "/restapi/v1/messageblast/blasts":{
+            "get":{
+                "consumes":[
+                ],
+                "produces":[
+                ],
+                "parameters":[
+                ],
+                "responses":{
+                    "200":{
+                        "description":"OK",
+                        "headers":{
+                        },
+                        "schema":{
+                            "$ref":"#/definitions/MessageBlastEntities"
+                        }
+                    }
+                }
+            }
+        },
+        "/restapi/v1/messageblast/blasts/{jobId}":{
+            "delete":{
+                "consumes":[
+                ],
+                "produces":[
+                ],
+                "parameters":[
+                    {
+                        "type":"string",
+                        "name":"jobId",
+                        "in":"path",
+                        "required":true
+                    }
+                ],
+                "responses":{
+                    "200":{
+                        "description":"OK",
+                        "headers":{
+                        }
+                    }
+                }
+            }
+        },
+        "/restapi/v1/messageblast/recievers/{from}":{
+            "get":{
+                "consumes":[
+                ],
+                "produces":[
+                    "application/json",
+                    "application/xml"
+                ],
+                "parameters":[
+                    {
+                        "type":"string",
+                        "name":"from",
+                        "in":"path",
+                        "required":true
+                    },
+                    {
+                        "type":"string",
+                        "name":"limit",
+                        "in":"query",
+                        "required":false
+                    },
+                    {
+                        "type":"string",
+                        "name":"query",
+                        "in":"query",
+                        "required":false
+                    }
+                ],
+                "responses":{
+                    "200":{
+                        "description":"OK",
+                        "headers":{
+                        },
+                        "schema":{
+                            "$ref":"#/definitions/BlastGroups"
+                        }
+                    }
+                }
+            }
+        },
+        "/restapi/v1/messageblast/sendblast":{
+            "post":{
+                "consumes":[
+                ],
+                "produces":[
+                ],
+                "parameters":[
+                    {
+                        "name":"body",
+                        "in":"body",
+                        "required":true,
+                        "schema":{
+                            "$ref":"#/definitions/MessageBlastEntity"
+                        }
+                    }
+                ],
+                "responses":{
+                    "200":{
+                        "description":"OK",
+                        "headers":{
+                        }
+                    }
+                }
+            }
+        },
+        "/restapi/v1/messageblast/senders":{
+            "get":{
+                "consumes":[
+                ],
+                "produces":[
+                    "application/json"
+                ],
+                "parameters":[
+                ],
+                "responses":{
+                    "200":{
+                        "description":"OK",
+                        "headers":{
+                        },
+                        "schema":{
+                            "type":"string"
+                        }
+                    }
+                }
+            },
+            "post":{
+                "consumes":[
+                ],
+                "produces":[
+                ],
+                "parameters":[
+                    {
+                        "name":"body",
+                        "in":"body",
+                        "required":true,
+                        "schema":{
+                            "type":"string"
+                        }
+                    }
+                ],
+                "responses":{
+                    "200":{
+                        "description":"OK",
+                        "headers":{
+                        }
+                    }
+                }
+            }
+        },
+        "/restapi/v1/messageblast/sentblasts":{
+            "get":{
+                "consumes":[
+                ],
+                "produces":[
+                ],
+                "parameters":[
+                ],
+                "responses":{
+                    "200":{
+                        "description":"OK",
+                        "headers":{
+                        },
+                        "schema":{
+                            "$ref":"#/definitions/MessageBlastSentEntities"
+                        }
+                    }
+                }
+            }
+        },
+        "/restapi/v1/messageblast/sentblasts/{from}/{jobId}":{
+            "get":{
+                "consumes":[
+                ],
+                "produces":[
+                ],
+                "parameters":[
+                    {
+                        "type":"string",
+                        "name":"from",
+                        "in":"path",
+                        "required":true
+                    },
+                    {
+                        "type":"string",
+                        "name":"jobId",
+                        "in":"path",
+                        "required":true
+                    },
+                    {
+                        "type":"string",
+                        "name":"count",
+                        "in":"query",
+                        "required":false
+                    },
+                    {
+                        "type":"string",
+                        "name":"filter",
+                        "in":"query",
+                        "required":false
+                    },
+                    {
+                        "type":"string",
+                        "name":"start",
+                        "in":"query",
+                        "required":false
+                    },
+                    {
+                        "type":"string",
+                        "name":"type",
+                        "in":"query",
+                        "required":false
+                    }
+                ],
+                "responses":{
+                    "200":{
+                        "description":"OK",
+                        "headers":{
+                        },
+                        "schema":{
+                            "$ref":"#/definitions/BlastGroups"
+                        }
+                    }
+                }
+            },
+            "delete":{
+                "consumes":[
+                ],
+                "produces":[
+                ],
+                "parameters":[
+                    {
+                        "type":"string",
+                        "name":"from",
+                        "in":"path",
+                        "required":true
+                    },
+                    {
+                        "type":"string",
+                        "name":"jobId",
+                        "in":"path",
+                        "required":true
+                    }
+                ],
+                "responses":{
+                    "200":{
+                        "description":"OK",
+                        "headers":{
+                        }
+                    }
+                }
+            }
+        },
         "/restapi/v1/messages/users":{
             "post":{
                 "consumes":[
@@ -3714,6 +3976,84 @@
                 }
             }
         },
+        "BlastEntity":{
+            "properties":{
+                "endpoint":{
+                    "type":"string"
+                },
+                "error":{
+                    "type":"boolean"
+                },
+                "firstAttemptTimeStamp":{
+                    "type":"string"
+                },
+                "jobId":{
+                    "type":"string"
+                },
+                "lastAttemptTimeStamp":{
+                    "type":"string"
+                },
+                "messageError":{
+                    "type":"string"
+                },
+                "messageIn":{
+                    "type":"string"
+                },
+                "messageOut":{
+                    "type":"string"
+                },
+                "name":{
+                    "type":"string"
+                },
+                "presence":{
+                    "type":"string"
+                },
+                "read":{
+                    "type":"boolean"
+                },
+                "replyTo":{
+                    "type":"string"
+                },
+                "responded":{
+                    "type":"boolean"
+                },
+                "retriesLeft":{
+                    "type":"string"
+                },
+                "sent":{
+                    "type":"boolean"
+                },
+                "sipUri":{
+                    "type":"string"
+                },
+                "subject":{
+                    "type":"string"
+                }
+            }
+        },
+        "BlastGroup":{
+            "properties":{
+                "name":{
+                    "type":"string"
+                },
+                "users":{
+                    "type":"array",
+                    "items":{
+                        "$ref":"#/definitions/BlastEntity"
+                    }
+                }
+            }
+        },
+        "BlastGroups":{
+            "properties":{
+                "groups":{
+                    "type":"array",
+                    "items":{
+                        "$ref":"#/definitions/BlastGroup"
+                    }
+                }
+            }
+        },
         "Bookmark":{
             "properties":{
                 "bookmarkID":{
@@ -4338,6 +4678,124 @@
                 }
             }
         },
+        "MessageBlastEntities":{
+            "properties":{
+                "blasts":{
+                    "type":"array",
+                    "items":{
+                        "$ref":"#/definitions/MessageBlastEntity"
+                    }
+                }
+            }
+        },
+        "MessageBlastEntity":{
+            "properties":{
+                "ackRequired":{
+                    "type":"boolean"
+                },
+                "crongroup":{
+                    "type":"string"
+                },
+                "cronjob":{
+                    "type":"string"
+                },
+                "cronquartz":{
+                    "type":"string"
+                },
+                "cronstop":{
+                    "type":"string"
+                },
+                "crontrigger":{
+                    "type":"string"
+                },
+                "dateToSend":{
+                    "type":"string"
+                },
+                "dateToStop":{
+                    "type":"string"
+                },
+                "highImportance":{
+                    "type":"boolean"
+                },
+                "message":{
+                    "type":"string"
+                },
+                "messagehtml":{
+                    "type":"string"
+                },
+                "recipients":{
+                    "type":"array",
+                    "items":{
+                        "type":"string"
+                    }
+                },
+                "replyTo":{
+                    "type":"string"
+                },
+                "sender":{
+                    "type":"string"
+                },
+                "sendlater":{
+                    "type":"boolean"
+                },
+                "title":{
+                    "type":"string"
+                },
+                "username":{
+                    "type":"string"
+                }
+            }
+        },
+        "MessageBlastSentEntities":{
+            "properties":{
+                "sentBlasts":{
+                    "type":"array",
+                    "items":{
+                        "$ref":"#/definitions/MessageBlastSentEntity"
+                    }
+                }
+            }
+        },
+        "MessageBlastSentEntity":{
+            "properties":{
+                "completed":{
+                    "type":"boolean"
+                },
+                "errorCount":{
+                    "type":"integer"
+                },
+                "id":{
+                    "type":"string"
+                },
+                "messageBlastEntity":{
+                    "$ref":"#/definitions/MessageBlastEntity"
+                },
+                "openfireUser":{
+                    "type":"string"
+                },
+                "readCount":{
+                    "type":"integer"
+                },
+                "recieveCount":{
+                    "type":"integer"
+                },
+                "recipientsCount":{
+                    "type":"integer"
+                },
+                "respondCount":{
+                    "type":"integer"
+                },
+                "sentCount":{
+                    "type":"integer"
+                },
+                "sentDate":{
+                    "type":"string"
+                },
+                "title":{
+                    "type":"string"
+                }
+            }
+        },
         "MessageEntity":{
             "properties":{
                 "body":{
@@ -4532,7 +4990,7 @@
                     "$ref":"#/definitions/XMPPError"
                 },
                 "extension":{
-                    "type":"object"
+                    "$ref":"#/definitions/ExtensionElement"
                 },
                 "extensions":{
                     "type":"array",
@@ -4780,7 +5238,7 @@
                     "$ref":"#/definitions/XMPPError"
                 },
                 "extension":{
-                    "type":"object"
+                    "$ref":"#/definitions/ExtensionElement"
                 },
                 "extensions":{
                     "type":"array",
